@@ -18,6 +18,7 @@ requires: [git, railsapps,
   rails_devise,
   rails_devise_roles,
   rails_devise_pundit,
+  rails_shortcut_app,
   rails_signup_download,
   rails_signup_thankyou,
   rails_mailinglist_activejob,
